fix minor layout issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 
 *{
-    border: 1px dashed blue;
     box-sizing: border-box;
 
 }
@@ -14,22 +13,25 @@ body {
     font-family: "Google Sans", system-ui, -apple-system, 'Segoe UI';
     margin: 0;
     height: 100vh;
-    border: 2px solid black;
     display: grid;
-    grid-template: 1fr 5fr / 1fr 3.5fr;
+    grid-template: 1fr 5fr / 1fr 5fr;
 }
 
 
 img {
     border-radius: 50%;
 }
-svg, .svg {
+img.svg, svg {
     filter: brightness(0) invert(1);
     &.black {
         filter:none;
     }
     width: 36px;
     height: 36px;
+    &.big-icon {
+        width: 60px;
+        height: 60px;
+    }
 }
 
 
@@ -38,24 +40,23 @@ svg, .svg {
     background-color: rgb(34, 177, 249);
     min-height: 0;
     overflow-y: auto;
-    padding: 10px;
-    border: 2px solid blue;
+    padding: 25px;
     grid-area: 1 / 1 / 3 / 2;
     display: flex;
     flex-direction: column;
     gap: 5%;
     .dashboard{
         align-items: center;
+        justify-content: start;
         display: flex;
         gap: 5%;
     }
     &>div:not(.dashboard) {
-        gap:  15px;
-        border: 1px solid pink;
+        margin-left: 3%;
+        gap: 15px;
         display: flex;
         flex-direction: column;
         div {
-            border: 1px solid red;
             display: flex;
             justify-content: start;
             align-items: center;
@@ -66,23 +67,16 @@ svg, .svg {
 
 
 .header {
-    border: 2px solid green;
-    div {
-        border: 1px solid;
-    }
-    padding: 10px 35px;
+    padding: 25px 50px;
     display: grid;
 
-    row-gap: 1%;
+    row-gap: 10%;
     grid-template: 1fr 2fr / 6fr 4fr;
     align-items: center;
     
 
     .top-right {
         font-weight: bold;
-        &>* {
-            border: 1px dashed red;
-        }
         align-self: stretch;
 
         display: flex;
@@ -107,7 +101,7 @@ svg, .svg {
             border-radius: 999px;
             transition:all 0.2 ease-in-out;
             &:hover, &:focus {
-                box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;;
+                box-shadow: rgba(119, 119, 119, 0.1) 0px 4px 12px;;
             }
         }
     }
@@ -123,12 +117,11 @@ svg, .svg {
         gap: 2%;
         label {
             position: relative;
-            left: 100%;
             justify-self: end;
         }
         input {
             justify-self: center;
-            width: 80%;
+            width: 100%;
             box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 5px;
             height: 70%;
             border: 1px solid grey;
@@ -160,7 +153,7 @@ svg, .svg {
             font-size: 1rem;
             &+p{
                 margin:0;
-                align-self: start;
+                align-self: center;
                 font-size: 1.5rem;
             }
         }
@@ -197,7 +190,7 @@ svg, .svg {
             }
             display: grid;
             gap: 16px;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             &>div {
                 padding: 16px 20px;
                 display: grid;
@@ -207,7 +200,11 @@ svg, .svg {
                     margin: 4px 0;
                 }
                 .icons{
+                    width: 50%;
                     justify-self: end;
+                    display: flex;
+                    justify-content: space-around;
+                    gap: 15%;
                 }
 
             }
